# minipandoc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  build.rs
.github/workflows/: pages.yml
bench/: bench_vs_pandoc.sh  m2_markdown_throughput.sh
bench/pulldown_cmark_bench/: Cargo.toml
bench/pulldown_cmark_bench/src/: main.rs
notes/: ast-element-sequence-semantics.md  embed-resources-url-fetching.md  measurements.md  panluna-pr-draft.md  use-cases.md
scripts/: build-wasm.sh  layout.lua  pandoc_module.lua  serve-browser-demo.sh  template.lua
scripts/lunamark/: FORKED_FROM
scripts/readers/: html.lua  markdown.lua  native.lua
scripts/templates/: default.html  default.latex  default.markdown  default.plain
scripts/writers/: epub.lua  html.lua  latex.lua  markdown.lua  native.lua  plain.lua
src/: ast.rs  cli.rs  format.rs  lib.rs  main.rs  options.rs  pipeline.rs
src/lua/: mod.rs
tests/: cli_surface.rs  commonmark_spec.rs  djot_parity.rs  epub_writer.rs  filter.rs  filter_parity.rs  gemtext_parity.rs  html_embed_resources.rs  html_parity.rs  html_reader_parity.rs  latex_parity.rs  markdown_parity.rs  markdown_reader_parity.rs  native_roundtrip.rs  panluna_fix_verification.rs  panluna_fix_verification_filter.lua  plain_parity.rs  template_engine.rs  wasi_smoke.rs
tests/common/: mod.rs  unwrap_sections.lua
tests/fixtures/: basic.md  escapes.md  header_attrs.md  inlines.md  inlines.native  lists.md  lists.native  meta.md  meta.native  table.md  table.native
tests/wasi/: run-wasi.mjs
web/: index.html  minipandoc.mjs
(+68 files in other folders)
