[package]
name = "minipandoc"
version = "0.1.0"
edition = "2021"
description = "A pandoc-compatible document converter where all format readers/writers are Lua scripts."
license = "MIT OR Apache-2.0"

[lib]
name = "minipandoc"
path = "src/lib.rs"

[[bin]]
name = "minipandoc"
path = "src/main.rs"

[dependencies]
mlua = { version = "0.11", features = ["lua54", "vendored"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
